# ChatServer_2

./: CMakeLists.txt  README.md  autoMake.sh
include/: public.hpp
include/server/: chatserver.hpp  chatservice.hpp
include/server/db/: CommonConnectionPool.hpp  Connection.hpp  db.hpp  pch.hpp
include/server/model/: friendmodel.hpp  group.hpp  groupmodel.hpp  groupuser.hpp  offlinemessage.hpp  user.hpp  usermodel.hpp
src/client/: main.cpp
src/server/: CMakeLists.txt  chatserver.cpp  chatservice.cpp  main.cpp
src/server/db/: CommonConnectionPool.cpp  Connection.cpp  db.cpp  pch.cpp
src/server/model/: friendmodel.cpp  groupmodel.cpp  offlinemessage.cpp  usermodel.cpp
